minor change to button names

--- a/main.html
+++ b/main.html
@@ -85,7 +85,7 @@ Enter a race and a season to display the driver standings for that race in that 
     <label for="season">Season:</label>
     <input type="text" id="season" name="season">
     <br>
-    <input type="submit" value="Submit">
+    <input type="submit" value="submit">
     <input type="reset" value="erase">
 </form>
 
@@ -104,7 +104,7 @@ Enter a race and a season to display the team standings for that race in that se
     <label for="season">Season:</label>
     <input type="text" id="season" name="season">
     <br>
-    <input type="submit" value="Submit">
+    <input type="submit" value="submit">
     <input type="reset" value="erase">
 </form>
 
