--- a/main.html
+++ b/main.html
@@ -111,6 +111,28 @@ Enter a race and a season to display the team standings for that race in that se
 <p>
 <a href="race_team_res.txt" >Contents</a> of the PHP page that gets called.
 
+<hr>
+<p>
+
+TODO
+
+<form method="POST" action="TODO.php">
+    <label for="race">Race:</label>
+    <input type="text" id="race" name="race">
+    <br>
+    <label for="season">Season:</label>
+    <input type="text" id="season" name="season">
+    <br>
+    <input type="submit" value="submit">
+    <input type="reset" value="erase">
+</form>
+
+<p>
+<a href="TODO.txt" >Contents</a> of the PHP page that gets called.
+
+<hr>
+
+
 
 <p>
 <a href="findOrders.txt" >Contents</a> of this page.
