update form for new query

--- a/main.html
+++ b/main.html
@@ -114,11 +114,11 @@ Enter a race and a season to display the team standings for that race in that se
 <hr>
 <p>
 
-TODO
+Enter a driver and a season to display that driver's race results across the season.
 
-<form method="POST" action="TODO.php">
-    <label for="race">Race:</label>
-    <input type="text" id="race" name="race">
+<form method="POST" action="driver_season_res.php">
+    <label for="driver">Driver Last Name:</label>
+    <input type="text" id="driver" name="driver">
     <br>
     <label for="season">Season:</label>
     <input type="text" id="season" name="season">
@@ -128,7 +128,7 @@ TODO
 </form>
 
 <p>
-<a href="TODO.txt" >Contents</a> of the PHP page that gets called.
+<a href="driver_season_res.txt" >Contents</a> of the PHP page that gets called.
 
 <hr>
 
