--- a/main.html
+++ b/main.html
@@ -131,7 +131,22 @@ Enter a driver and a season to display that driver's race results across the sea
 <a href="driver_season_res.txt" >Contents</a> of the PHP page that gets called.
 
 <hr>
+<p>
 
+Enter a season to display the average results of every driver over that season.
+
+<form method="POST" action="driver_avg_season.php">
+    <label for="season">Season:</label>
+    <input type="text" id="season" name="season">
+    <br>
+    <input type="submit" value="submit">
+    <input type="reset" value="erase">
+</form>
+
+<p>
+<a href="driver_season_res.txt" >Contents</a> of the PHP page that gets called.
+
+<hr>
 
 
 <p>
