--- a/main.html
+++ b/main.html
@@ -144,7 +144,7 @@ Enter a season to display the average results of every driver over that season.
 </form>
 
 <p>
-<a href="driver_season_res.txt" >Contents</a> of the PHP page that gets called.
+<a href="driver_avg_season.txt" >Contents</a> of the PHP page that gets called.
 
 <hr>
 
