add input box for season_race info

--- a/main.html
+++ b/main.html
@@ -147,6 +147,22 @@ Enter a season to display the average results of every driver over that season.
 <a href="driver_avg_season.txt" >Contents</a> of the PHP page that gets called.
 
 <hr>
+<p>
+
+Enter a season to display information about each race of the season.
+
+<form method="POST" action="season_race_info.php">
+    <label for="season">Season:</label>
+    <input type="text" id="season" name="season">
+    <br>
+    <input type="submit" value="submit">
+    <input type="reset" value="erase">
+</form>
+
+<p>
+<a href="season_race_info.txt" >Contents</a> of the PHP page that gets called.
+
+<hr>
 
 
 <p>
