add way to display contents of page in text format

--- a/main.html
+++ b/main.html
@@ -166,7 +166,7 @@ Enter a season to display information about each race of the season.
 
 
 <p>
-<a href="findOrders.txt" >Contents</a> of this page.
+<a href="main.txt" >Contents</a> of this page.
 
 <p>
 <a href="connectionData.txt" >Contents</a> 
