add link to tables.html

--- a/main.html
+++ b/main.html
@@ -188,8 +188,11 @@ Enter a team name and a season to display information about that team's drivers 
 <a href="main.txt" >Contents</a> of this page.
 
 <p>
-<a href="connectionData.txt" >Contents</a> 
-of the connection data.
+
+<a href="tables.html" >Contents</a> of the tables.
+
+<p>
+<a href="connectionData.txt" >Contents</a> of the connection data.
 
 </body>
 </html>
