add href to contents of page

--- a/tables.html
+++ b/tables.html
@@ -20,6 +20,9 @@
 <a href="tables/team.txt" >team table</a> (10 rows)
 </pre>
 <hr>
+<p>
+
+<a href="tables.txt" >Contents</a> of this page.
 
 </body>
 </html>
